Overlapping issue on mobile fixed

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,6 +11,10 @@
 .mainText {
   font-size: 2rem;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
   padding: 1rem;
 }
 
